==> xingke-mo/Arduino-For-Keil/_Keilduino (STM32)/_Keilduino (STM32F4xx)/Core/timer.c <==
#include "timer.h"

void Timer_ClockCmd(TIM_TypeDef* TIMx, FunctionalState NewState)
{
    if(TIMx == TIM1)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, NewState);
    }
    else if(TIMx == TIM2)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, NewState);
    }
    else if(TIMx == TIM3)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, NewState);
    }
    else if(TIMx == TIM4)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4, NewState);
    }
    else if(TIMx == TIM5)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM5, NewState);
    }
    else if(TIMx == TIM6)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM6, NewState);
    }
    else if(TIMx == TIM7)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM7, NewState);
    }
    else if(TIMx == TIM8)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM8, NewState);
    }
    else if(TIMx == TIM9)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM9, NewState);
    }
    else if(TIMx == TIM10)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM10, NewState);
    }
    else if(TIMx == TIM11)
    {
        RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM11, NewState);
    }
    else if(TIMx == TIM12)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM12, NewState);
    }
    else if(TIMx == TIM13)
    {
        RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM13, NewState);
    }
    else
    {
        if(TIMx == TIM14)
        {
            RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM14, NewState);
        }
    }
}

void Timer_SetInterrupt(TIM_TypeDef* TIMx, uint32_t time, Timer_CallbackFunction_t function)
{
    uint16_t period, prescaler;
    uint32_t clock = (IS_APB2_TIM(TIMx) ? F_CPU : (F_CPU / 2));

    if(!IS_TIM_ALL_PERIPH(TIMx) || time == 0)
    {
        return;
    }

    /*将定时中断时间转换为重装值和时钟分频值*/
    Timer_TimeToArrPsc(
        time,
        clock,
        &period,
        &prescaler
    );

    /*定时中断配置*/
    Timer_SetInterruptBase(
        TIMx,
        period,
        prescaler,
        function,
        Timer_PreemptionPriority_Default,
        Timer_SubPriority_Default
    );
}

void Timer_SetInterruptFreqUpdate(TIM_TypeDef* TIMx, uint32_t freq)
{
    uint16_t period, prescaler;
    uint32_t clock = (IS_APB2_TIM(TIMx) ? F_CPU : (F_CPU / 2));

    if(!IS_TIM_ALL_PERIPH(TIMx) || freq == 0)
    {
        return;
    }

    Timer_FreqToArrPsc(
        freq,
        clock,
        &period,
        &prescaler
    );
    TIM_SetAutoreload(TIMx, period - 1);
    TIM_PrescalerConfig(TIMx, prescaler - 1, TIM_PSCReloadMode_Immediate);
}

uint32_t Timer_GetClockOut(TIM_TypeDef* TIMx)
{
    uint32_t clock = (IS_APB2_TIM(TIMx) ? F_CPU : (F_CPU / 2));

    if(!IS_TIM_ALL_PERIPH(TIMx))
    {
        return 0;
    }

    return (clock / ((TIMx->ARR + 1) * (TIMx->PSC + 1)));
}

void Timer_SetInterruptTimeUpdate(TIM_TypeDef* TIMx, uint32_t time)
{
    uint16_t period, prescaler;
    uint32_t clock = (IS_APB2_TIM(TIMx) ? F_CPU : (F_CPU / 2));

    if(!IS_TIM_ALL_PERIPH(TIMx))
    {
        return;
    }

    Timer_TimeToArrPsc(
        time,
        clock,
        &period,
        &prescaler
    );

    TIM_SetAutoreload(TIMx, period - 1);
    TIM_PrescalerConfig(TIMx, prescaler - 1, TIM_PSCReloadMode_Immediate);
}

void Timer_SetInterruptBase(
    TIM_TypeDef* TIMx,
    uint16_t period, uint16_t prescaler,
    Timer_CallbackFunction_t function,
    uint8_t PreemptionPriority, uint8_t SubPriority
)
{
    TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
    NVIC_InitTypeDef NVIC_InitStructure;
    uint8_t TIMx_IRQn;
    TIMER_Type TIMERx;

    if(!IS_TIM_ALL_PERIPH(TIMx))
    {
        return;
    }

#define TIMx_IRQn_DEF(n,x_IRQn)\
    do{\
        if(TIMx == TIM##n)\
        {\
            TIMERx = TIMER##n;\
            TIMx_IRQn = x_IRQn;\
        }\
    }\
    while(0)

    /*如果提示
     *identifier "xxx_IRQn" is undefined
     *把未定义的注释掉即可
     */
    TIMx_IRQn_DEF(1, TIM1_UP_TIM10_IRQn);
    TIMx_IRQn_DEF(2, TIM2_IRQn);
    TIMx_IRQn_DEF(3, TIM3_IRQn);
    TIMx_IRQn_DEF(4, TIM4_IRQn);
    TIMx_IRQn_DEF(5, TIM5_IRQn);
    //    TIMx_IRQn_DEF(6, TIM6_DAC_IRQn);
    //    TIMx_IRQn_DEF(7, TIM7_IRQn);
    //    TIMx_IRQn_DEF(8, TIM8_UP_TIM13_IRQn);
    TIMx_IRQn_DEF(9, TIM1_BRK_TIM9_IRQn);
    TIMx_IRQn_DEF(10, TIM1_UP_TIM10_IRQn);
    TIMx_IRQn_DEF(11, TIM1_TRG_COM_TIM11_IRQn);
    //    TIMx_IRQn_DEF(12, TIM8_BRK_TIM12_IRQn);
    //    TIMx_IRQn_DEF(13, TIM8_UP_TIM13_IRQn);
    //    TIMx_IRQn_DEF(14, TIM8_TRG_COM_TIM14_IRQn);

    if(TIMx_IRQn == 0)
    {
        return;
    }

    /*register callback function*/
    TIMx_Function[TIMERx] = function;

    /*Enable PeriphClock*/
    TIM_DeInit(TIMx);
    Timer_ClockCmd(TIMx, ENABLE);

    TIM_TimeBaseStructure.TIM_RepetitionCounter = 0;
    TIM_TimeBaseStructure.TIM_Period = period - 1;         //设置在下一个更新事件装入活动的自动重装载寄存器周期的值
    TIM_TimeBaseStructure.TIM_Prescaler = prescaler - 1;  //设置用来作为TIMx时钟频率除数的预分频值  10Khz的计数频率
    TIM_TimeBaseStructure.TIM_ClockDivision = TIM_CKD_DIV1;     //设置时钟分割:TDTS = Tck_tim
    TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;  //TIM向上计数模式
    TIM_TimeBaseInit(TIMx, &TIM_TimeBaseStructure); //根据TIM_TimeBaseInitStruct中指定的参数初始化TIMx的时间基数单位

    /**********************************设置中断优先级************************************/
    NVIC_InitStructure.NVIC_IRQChannel = TIMx_IRQn;  //TIM中断
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = PreemptionPriority;  //先占优先级
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = SubPriority;  //从优先级
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; //IRQ通道被使能
    NVIC_Init(&NVIC_InitStructure);  //根据NVIC_InitStruct中指定的参数初始化外设NVIC寄存器

    TIM_ClearFlag(TIMx, TIM_FLAG_Update);
    TIM_ITConfig(TIMx, TIM_IT_Update, ENABLE);  //使能TIM中断
}
